fix layout issues

--- a/styles.css
+++ b/styles.css
@@ -19,22 +19,18 @@ html {
 }
 
 body {
-    font-size: 1.6rem;
-    min-height: 100vh;
+    font-size: 1.6rem;    
     font-family: Helvetica, Arial, sans-serif;
+    min-height: 100vh;
 
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: min-content min-content;
+    grid-template-rows: auto 4fr;
 }
 
 ul, li {
     list-style-type: none;
     list-style: none;
-}
-
-h2 {
-    margin-bottom: 1rem;
 }
 
 /* header */
@@ -45,7 +41,7 @@ header {
 header input {
     border: none;
     width: 60%;
-    height: 2rem;
+    height: 3rem;
     border-radius: 20px;
     background-color: var(--secondary-white);
 }
@@ -132,7 +128,7 @@ aside {
     font-size: 2rem;
 
     display: grid;
-    grid-template-rows: min-content min-content min-content;
+    grid-template-rows: repeat(3, min-content);
     gap: 6rem;
     grid-row: 1/3;
     grid-column: 1/2;
@@ -176,44 +172,47 @@ main {
     background-color: var(--secondary-white);
     padding: 2rem 1rem;
     display: grid;
+    grid-template-columns: 4fr 1fr;
     gap: 1rem;
 }
 
 .main-content {
-    grid-column: 1/2;
-    grid-row: 1/3;
-}
-
-.main-content article {
+    grid-column: 1/2;    
     display: grid;   
     gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(50ch, 1fr));
+    grid-template-rows: 3rem 25rem 25rem;
+    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+    grid-auto-rows: 25rem
+}
+
+.main-content h2 {
+    grid-column: 1/-1;    
 }
 
 .main-content .card {
-    width: 100%;
-    aspect-ratio: 2/1;
+    width: 100%;    
+    
     background-color: var(--primary-white);
     padding: 3rem;
     border-left: 10px solid var(--secondary-color);
-    border-radius: 15px;
+    border-radius: 15px;    
 
-    display: flex;
-    flex-direction: column;
+    display: grid;    
+    grid-template-rows: 1fr auto;   
 }
 
-.card p:first-child {
+.text-block div:first-child {
     font-size: 2rem;
     font-weight: bold;
 }
 
-.card p:nth-child(2) {
+.text-block div:last-child {
     font-size: 1.6rem;
     color: #8b8b8b;
     margin-bottom: auto;
 }
 
-.card > div{
+.card .action-block {
     margin-top: auto;
 
     display: flex;
@@ -228,42 +227,54 @@ main {
     width: 3%;
 }
 
-.announcement-and-trending {
+.announcement-and-trending {    
     grid-column: 2/3;
 
     display: grid;
-    gap: 3rem;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
 }
 
-.side-content {    
-    min-width: 20ch;
-    width: 30ch;
-    max-width: 40ch;
-    height: min-content;    
+.announcement,
+.trending {        
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
-.side-content article {    
+.announcement-content {    
     padding: 2rem;        
     background-color: var(--primary-white);
 }
 
-.side-content p {
+.announcement-content p {
     font-size: 1.6rem;
     color: #8b8b8b;
 }
 
-.side-content article > div {
+.announcement-content > div {
     margin: 2rem 0;
 }
 
-.side-content:nth-child(2) article > div {
+.trending-content {
+    background-color: var(--primary-white);
+    padding: 2rem;
+}
+
+.trending-content > div {
+    padding: 2rem 1rem;
     display: flex;
     align-items: center;
 }
 
-.side-content:nth-child(2) img {
+.trending-content p {
+    color: #8b8b8b;
+    font-size: 1.6rem;
+}
+
+.trending img {
     min-width: 2.5rem;       
     width: 20%;
     border-radius: 50%;
     margin-right: 1rem;
-}
+} 
